[tool.poetry]
name = "maze_gen"
version = "1.0.0"
description = "Maze Generator project from 42 School"
authors = ["mdouroi", "melschmi"]
readme = "README.md"

packages = [
	{ include = "generators"},
	{ include = "source"},
]

[tool.poetry.dependencies]
python = ">=3.10"
mypy = "1.19.1"
flake8 = "7.3.0"
mlx = {file = "ressources/mlx-2.2-py3-none-any.whl"}
